--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -39,23 +39,47 @@
   .MuiSvgIcon-root {
     font-size: 28px;
   }
-  .name{
-    font-size: 24px;
+  .name {
+    font-size: 40px;
     font-family: Roboto;
     margin-top: 0;
+    margin-bottom: 0;
     display: flex;
     position: relative;
     align-items: center;
-    /* display: inline-block; */
+    display: inline-block;
     font-weight: bold;
+    align-items: baseline;
   }
 
+.name::before,
+.name::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background-color: #ba0000;
+  transform-origin: center;
+  transition: width 1s; 
+}
+
+
+.name:hover::before {
+    right: 0;
+    width: 100%; 
+  }
+
+  
+  
+  
   @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway:wght@300&family=Tektur:wght@400;500&display=swap');
 
   .e-cell-name {
     font-family: Raleway;
     color: rgb(244, 18, 18);
   }
+
   .e-cell-name:hover{
     transform: scale(1.05);
     color: #9b0c0c;
@@ -73,6 +97,7 @@
     margin-left: 12px;
     color: #cec7c7;
   }
+
  
   .tagline-container {
     position: relative;
@@ -85,22 +110,25 @@
     color: #eae8e8;
     font-family: Montserrat;
     font-size: 20px;
-    margin-top: 0;
+    text-align: center;
+    /* margin-top: 0; */
   }
   
 
   
   .button {
-    display: inline-block;
+    position: absolute;
+    /* display: inline-block; */
     padding: 10px 20px;
     width: 60px;
-    /* margin-left: 40%; */
+    margin-left: 40%;
     background-color: rgb(244, 18, 18);
     color: #fff;
-    text-decoration: none;
-    border-radius: 4px;
+    text-decoration:double;
+    border-radius: 8px;
     font-size: 16px;
-    transition: transform 0.5s; 
+    align-items: center;
+    justify-content: center;
   }
   
   .button:hover {
