--- a/src/Components/NameAndTagline/NameAndTagline.css
+++ b/src/Components/NameAndTagline/NameAndTagline.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     display: inline-block;
-    margin-right: auto;
+    /* margin-right: auto; */
   }
 
   .name {
