--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -8,16 +8,20 @@
     width: 100%;
     height: 100%;
     display: flex; 
-   justify-content: center;
+    /* justify-content:flex-start; */
+    /* justify-content: center; */
    align-items: center;
   }
 
   .name-and-tagline{
-    /* align-items: center; */
-    margin-left: 20px;
+    position: relative;
+    /* margin-left: 25%; */
+    /* justify-self: center; */
+    align-items: center;
+    justify-content: center;
   }
   .social-media{
-
+    justify-self: flex-start;
   }
 
   
