--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -8,20 +8,18 @@
     width: 100%;
     height: 100%;
     display: flex; 
-    /* justify-content:flex-start; */
-    /* justify-content: center; */
    align-items: center;
+   justify-content: space-evenly;
   }
 
   .name-and-tagline{
     position: relative;
-    /* margin-left: 25%; */
-    /* justify-self: center; */
     align-items: center;
     justify-content: center;
   }
   .social-media{
-    justify-self: flex-start;
+    position: absolute;
+    justify-items: left;
   }
 
   
