--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -4,21 +4,19 @@
     display: flex;
     position: fixed;
     top: 0;
-    /* background-color: rgb(45, 45, 45); */
     width: 100%;
     z-index: 100;
     justify-content: space-between;
     align-items: center;
     backdrop-filter: blur(10px);
-    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(1000,600, 1, 2); */
     box-shadow: 0 4px 8px 0 rgb(105, 14, 14);
     background: linear-gradient( white);
-    opacity: 50%;
   }
   
   .brand-title {
-    font-size: 1.5rem;
-    margin: 0.5rem;
+    /* font-size: 1.5rem; */
+    margin-left: 1.5rem;
+    opacity: 80%;
   }
   
   .navbar-links {
@@ -38,6 +36,7 @@
     font-weight: 500;
     transition: all 0.5s ease;
     cursor: pointer;
+    opacity: 60%;
   }
   
   .navbar-links li a {
@@ -60,11 +59,13 @@
     justify-content: space-between;
     width: 30px;
     height: 21px;
+    /* opacity: 50%; */
   }
   
-  .e_cell-logo {
+ .e_cell-logo {
     width: 40px;
-  }
+    position: relative;
+  } 
   
   .toggle-button .bar {
     height: 3px;
