--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,26 +1,34 @@
   .home {
     height: 100vh;
     background-color: #302f2f;
-    overflow: hidden;
+    /* overflow: hidden; */
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex; 
-   align-items: center;
-   justify-content: space-evenly;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
   }
 
-  .name-and-tagline{
+  .name-and-tagline {
     position: relative;
     align-items: center;
     justify-content: center;
   }
-  .social-media{
+
+  .social-media {
     position: absolute;
     justify-items: left;
   }
 
-  
-  
+  .footer {
+    position: absolute;
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #302f2f;
+    color: aliceblue;
+  }
