--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
 .App {
+  /* text-align: center; */
+  color: rgb(46, 46, 46);
+  background-color: #302f2f;  
+}
+html{
+  background-color: #302f2f;
+
+}
+.footer {
+  position: fixed;
   text-align: center;
-  color: rgb(46, 46, 46);  
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #302f2f;
+  color: aliceblue;
 }
 
 .App-logo {
