--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,6 +11,8 @@
     backdrop-filter: blur(10px);
     box-shadow: 0 4px 8px 0 rgb(105, 14, 14);
     background: linear-gradient( white);
+    background-color: #302f2f;
+
   }
   
   .brand-title {
