--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -1,10 +1,14 @@
 .about{
     height: 100vh;
     background-color: #302f2f;
-    position: absolute;
-    width: 100%;
-    height: 100%; 
+    position: relative;
+    /* width: 100%; */
+    /* height: 100%;  */
     display: flex; 
     justify-content: center;
     align-items: center;
+}
+
+.about-paragraph{
+    color: aliceblue;
 }
