--- a/src/Pages/Events/Events.css
+++ b/src/Pages/Events/Events.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    position: relative;
   }
   
   .event-page--container {
