--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,136 +1,134 @@
-/* Navbar.css */
-
 .navbar {
-    display: flex;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 100;
-    justify-content: space-between;
-    align-items: center;
-    backdrop-filter: blur(10px);
-    box-shadow: 0 4px 8px 0 rgb(105, 14, 14);
-    background: linear-gradient( white);
-    background-color: #302f2f;
+  display: flex;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
+  justify-content: space-between;
+  align-items: center;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 4px 8px 0 rgb(105, 14, 14);
+  background: linear-gradient(white);
+  background-color: #302f2f;
+}
 
-  }
-  
-  .brand-title {
-    /* font-size: 1.5rem; */
-    margin-left: 1.5rem;
-    opacity: 80%;
-  }
-  
-  .navbar-links {
-    height: 100%;
-  }
-  
-  .navbar-links ul {
-    display: flex;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .navbar-links li {
-    list-style: none;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: 500;
-    transition: all 0.5s ease;
-    cursor: pointer;
-    opacity: 60%;
-  }
-  
-  .navbar-links li a {
-    display: block;
-    text-decoration: none;
-    color: white;
-    padding: 1rem;
-  }
-  
-  .navbar-links li:hover {
-    transform: scale(1.1);
-  }
-  
-  .toggle-button {
-    position: absolute;
-    top: 0.75rem;
-    right: 1rem;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
-    /* opacity: 50%; */
-  }
-  
- .e_cell-logo {
-    width: 40px;
+.brand-title {
+  margin-left: 1.5rem;
+  opacity: 80%;
+}
+
+.navbar-links {
+  height: 100%;
+}
+
+.navbar-links ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-links li {
+  list-style: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 500;
+  transition: all 0.5s ease;
+  cursor: pointer;
+  opacity: 60%;
+}
+
+.navbar-links li a {
+  display: block;
+  text-decoration: none;
+  color: white;
+  padding: 1rem;
+}
+
+.navbar-links li:hover {
+  transform: scale(1.1);
+}
+
+.toggle-button {
+  position: absolute;
+  top: 0.75rem;
+  right: 1rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+
+.e_cell-logo {
+  width: 40px;
+  position: relative;
+}
+
+.toggle-button .bar {
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.social-media {
+  margin-right: 1rem;
+  text-align: center;
+}
+
+.social-media ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.social-media li {
+  margin-left: 1rem;
+}
+
+.social-media li a {
+  color: white;
+  font-size: 1.2rem;
+}
+
+@media (max-width: 810px) {
+  .e_cell-logo {
     position: relative;
-  } 
-  
-  .toggle-button .bar {
-    height: 3px;
-    width: 100%;
-    background-color: white;
-    border-radius: 10px;
+    right: 30%;
   }
-  
-  .social-media {
-    margin-right: 1rem;
+
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0;
+  }
+
+  .toggle-button {
+    display: flex;
+    top: 25px;
+  }
+
+  .navbar-links {
+    display: none;
+    width: 100%;
+  }
+
+  .navbar-links ul {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .navbar-links ul li {
     text-align: center;
   }
-  
-  .social-media ul {
+
+  .navbar-links ul li a {
+    padding: 0.5rem 1rem;
+  }
+
+  .navbar-links.active {
     display: flex;
-    justify-content: center;
-    list-style: none;
-    padding: 0;
-    margin: 0;
   }
-  
-  .social-media li {
-    margin-left: 1rem;
-  }
-  
-  .social-media li a {
-    color: white;
-    font-size: 1.2rem;
-  }
-  
-  @media (max-width: 800px) {
-    .navbar {
-      flex-direction: column;
-      align-items: center;
-      padding: 10px 0;
-    }
-  
-    .toggle-button {
-      display: flex;
-      top: 25px;
-    }
-  
-    .navbar-links {
-      display: none;
-      width: 100%;
-    }
-  
-    .navbar-links ul {
-      width: 100%;
-      flex-direction: column;
-    }
-  
-    .navbar-links ul li {
-      text-align: center;
-    }
-  
-    .navbar-links ul li a {
-      padding: 0.5rem 1rem;
-    }
-  
-    .navbar-links.active {
-      display: flex;
-    }
-  }
-  
-  
+}
