--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,28 +1,55 @@
+.home {
+  background-color: #302f2f;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 18%;
+}
+
+.social-media {
+  position: absolute;
+}
+
+@media (max-width:1300px) {
   .home {
-    height: 100vh;
-    background-color: #302f2f;
-    /* overflow: hidden; */
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    margin-top: 22%;
   }
+}
 
-  .name-and-tagline {
-    position: relative;
-    align-items: center;
-    justify-content: center;
+@media (max-width:1000px) {
+  .home {
+    margin-top: 25%;
   }
+}
 
-  .social-media {
-    position: absolute;
-    justify-items: left;
+@media (max-width:800px) {
+  .home {
+    margin-top: 30%;
   }
-  .animation1{
-    
-  }
+}
 
+@media (max-width:550px) {
+  .home {
+    margin-top: 40%;
+  }
+}
+
+@media (max-width:400px) {
+  .home {
+    margin-top: 45%;
+  }
+}
+
+@media (max-width:340px) {
+  .home {
+    margin-top: 50%;
+  }
+}
+
+@media (max-width:300px) {
+  .home {
+    margin-top: 55%;
+  }
+}
